[bug] Fix appearence on mobile

--- a/index.css
+++ b/index.css
@@ -187,7 +187,6 @@ input[disabled].lr {
     width: 80vw;
     max-width: 1000px;
     margin-top: 20px;
-    margin-bottom: 20px;
     font-size: 38pt;
     font-weight: lighter;
     font-family: 'Ubuntu', sans-serif;
@@ -195,6 +194,13 @@ input[disabled].lr {
     display: flex;
     justify-content: flex-start;
     overflow: auto;
+}
+
+#header-right {
+    width: 80vw;
+    max-width: 1000px;
+    margin-bottom: 20px;
+    display:flex;
 }
 
 #sun {
